# who-is-that

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint_code.yaml
backend/: app.py  helpers.py  ollama_query.py
backend/prompts/: input_prompt.txt  input_prompts.json
backend/spoilerdb/: database.yml
data/: ReinforcingREG.txt
docker/: backend.Dockerfile  docker-compose-integrated-ollama.yaml  docker-compose-native-ollama.yaml  docker-compose.yaml  frontend.Dockerfile  ollama.Dockerfile
frontend/: app.py  backend_query.py  extract.py  summarise.py  utility.py
frontend/static/: styles.css
frontend/static/js/: scripts.js
frontend/templates/: index.html  load.html  process.html
gui/: app.py
gui/templates/: process.html
notebooks/: Demo.ipynb  example_filmscript.ipynb  example_gemma.ipynb  example_query_api.ipynb  extract_texts_from_books.ipynb  spolier-detection-reinforcing-reg.ipynb  spolier-detection.ipynb
notebooks/spoilers/: pride.yml
notebooks/whoisthat/: database.yml  whoisthat.py
tests/books/: alice-in-wonderland.epub  pride-and-prejudice.epub  reinforcing-reg.azw3  reinforcing-reg.epub
who_is_that/: __init__.py  backend.py  entrypoint.py  extract.py  summarise.py
who_is_that/prompts/: input_prompt.txt
