[tool.poetry]
name = "who-is-that"
version = "0.1.0"
description = "Generate spoiler-free summaries of characters up-to-a-given-point in a text"
authors = [
    "Edward Chalstrey <echalstrey@turing.ac.uk>",
    "Lydia France <lfrance@turing.ac.uk>",
    "Radka Jersakova <r.jersakova@gmail.com>",
    "Federico Nanni <nanni.federico@gmail.com>",
    "Camila Rangel Smith <camila.rangel.smith@gmail.com>",
    "James Robinson <james.em.robinson@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
ebooklib = "^0.18"
flask = "^3.0.3"
ollama = "^0.2.1"
pillow = "^10.3.0"
PyYAML = "^6.0.1"

# [tool.poetry.plugins."flask.commands"]
# "my-command" = "flask_my_extension.commands:cli"

[tool.poetry.scripts]
extract = "who_is_that.entrypoint:extract"
summarise = "who_is_that.entrypoint:summarise"
# webapp = ""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
