[tool.poetry]
name = "who-is-that"
version = "0.1.0"
description = "Generate spoiler-free summaries of characters up-to-a-given-point in a text"
authors = [
    "Edward Chalstrey <echalstrey@turing.ac.uk>",
    "Lydia France <lfrance@turing.ac.uk>",
    "Radka Jersakova <r.jersakova@gmail.com>",
    "Federico Nanni <nanni.federico@gmail.com>",
    "Camila Rangel Smith <camila.rangel.smith@gmail.com>",
    "James Robinson <james.em.robinson@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
ebooklib = "^0.18"
flask = "^3.0.3"
ollama = "^0.2.1"
pillow = "^10.3.0"
PyYAML = "^6.0.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[tool.ruff.lint]
select = [
  # See https://beta.ruff.rs/docs/rules/
  "A",     # flake8-builtins
  "AIR",   # Airflow
  "ANN",   # flake8-annotations
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except
  "C",     # complexity, mcabe and flake8-comprehensions
  "COM",   # flake8-commas
  "D",     # pydocstyle
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle errors
  "EM",    # flake8-errmsg
  "ERA",   # eradicate
  "EXE",   # flake8-executable
  "F",     # pyflakes
  "FA",    # flake8-future-annotations
  "FBT",   # flake8-boolean-trap
  "FIX",   # flake8-fixme
  "FLY",   # flynt
  "FURB",  # refurb
  "G",     # flake8-logging-format
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "INP",   # flake8-no-pep420
  "INT",   # flake8-gettext
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "N",     # pep8-naming
  "NPY",   # numpy-specific-rules
  "PD",    # pandas-vet
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PLC",   # pylint convention
  "PLE",   # pylint error
  "PLR",   # pylint refactor
  "PLW",   # pylint warning
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-use-pathlib
  "PYI",   # flake8-pyi
  "Q",     # flake8-quotes
  "RET",   # flake8-return
  "RSE",   # flake8-raise
  "RUF",   # ruff rules
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "SLOT",  # flake8-slot
  "T",     # flake8-debugger and flake8-print
  "TCH",   # flake8-type-checking
  "TD",    # flake8-todos
  "TID",   # flake8-tidy-imports
  "TRIO",  # flake8-trio
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
  "YTT",   # flake8-2020
]
ignore = [
  "D100",     # missing-docstring-in-module
  "D102",     # missing-docstring-in-public-method
  "D104",     # missing-docstring-in-package
  "D105",     # missing-docstring-in-magic-method
  "D203",     # one-blank-line-before-class due to conflict with D211
  "D213",     # multi-line-summary-second-line due to conflict with D212
  "E501",     # line length
  "C901",     # complex-structure
  "PLR0912",  # too-many-branches
  "PLR0913",  # too-many-arguments
  "PLR0917",  # too-many-positional-arguments
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

# [tool.ruff.lint.flake8-tidy-imports]
# ban-relative-imports = "parents"

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
